--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,12 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "mews/captcha": "~2.0",
+        "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "~3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
@@ -24,7 +27,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Common/Helpers/function.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
