--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.1",
+        "eaglewu/swoole-ide-helper": "dev-master",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
